docs: ScalingCharacterization §10 — Vector API on dotAt
Sweep #4 at N=300 measures the Vector API dotAt rewrite:
  - dotAt JFR samples 808 → 197 (-76%, 4.1× drop) — JIT compiled the
    FMA to a native vector intrinsic (jdk.internal.vm.vector.VectorSupport
    appears in the timeline).
  - Median request latency 188ms → 124ms (-34%); p90 1.85s → 1.60s
    (-14%); p95 2.48s → 2.36s (-5%).
  - Throughput at saturation barely moved (+1.3% RPS), confirming
    the saturation gate lives elsewhere (most likely the still-top
    MatchOps\$1MatchSink caller, now at 416 samples down from 1677).
  - load1 nearly doubled (28.7 → 53.25 = 333% saturation) — box doing
    way more CPU work per second of wall time.

Names the next investigation: stack-depth-30 JFR re-capture to
identify the MatchOps caller, then HashMap traffic, then caching.
One ugly tail outlier (19.48s max) flagged for follow-up if it
reproduces.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>